variaveis de ambiente configuradas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-gerencianet.clientid=${CLIENT_ID:Client_Id_6e719da62a14c266dc61cb39d13269e8c82d7db9}
-gerencianet.secret=${SECRET_ID:Client_Secret_d3c5043648f2fe40c9f3ad44fc54305e76427129}
+app.id=Client_Id_d6671fc1c145c597bbedd171b9791019292c2c5a
+app.secret=Client_Secret_80121bf3c572ed5af50e12c925d37eae9f961766
