metodo pagar transacao criado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 app.id=Client_Id_d6671fc1c145c597bbedd171b9791019292c2c5a
 app.secret=Client_Secret_80121bf3c572ed5af50e12c925d37eae9f961766
+app.sandbox=true
